# clara-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Jenkinsfile  README.md  TODO.md  embedding.ipynb  vars.groovy
container/ai-assistant/: Dockerfile
container/ai-assistant/app/: CHANGELOG.md  app_chainlit.py  chat_with_openai.py  db_class.py  deps.txt  logger_config.py  main.py  pyproject.toml  sync_linkedin_data.py
container/ai-assistant/app/.chainlit/: config.toml
container/ai-assistant/app/.chainlit/translations/: pt-PT.json
container/ai-assistant/sql/: schemas.sql
data/: positions.json
infra/: dep-assistant.yml  dep-db-groom.yml  dep-groom.yml  pvc-db-assistant.yml  route-db-groom.yml  route-groom.yml  svc-db-groom.yml  svc-groom.yml
src/: .dockerignore  Dockerfile
src/app/: LICENCE  app_chainlit.py  app_chainlit_example.py  auth.py  chainlit.md  chainlit_en-US.md  chainlit_fr-FR.md  detect_password.py  main.py  module_discovery.py  poetry.toml  pyproject.toml
src/app/.chainlit/: config.toml
src/app/.chainlit/translations/: en-US.json  fr-FR.json
src/app/data/: example_file_list.json  positions.json
src/app/llm/: __init__.py  capabilities.py  factory.py
src/app/modules/: EventHandler.py  HumanInputChainlit.py
src/app/tools/: GmailTools.py  __init__.py  search.py  time.py  web_scrapper.py
src/app/workflow/: base.py  workflow_factory.py
src/ingestion_assistant/: sync_linkedin_data.py
