[tool.poetry]


name = "ai-assistant"
version = "0.1.0"
package-mode = false
authors = ["Fakher HANNAFI <fakher.hannafi@datasonic.co>"]
maintainers = ["Fakher HANNAFI <fakher.hannafi@datasonic.co>"]

description = "My Virtual Assistant who knows everything about me."
license = "MIT"
keywords = ["assistant", "ai", "development"]

[tool.poetry.dependencies]
python = "<4.0.0,>=3.9"
chainlit = "1.3.2"
openai = "1.54.4"
plotly = "5.24.1"
langchain = "0.3.7"
literalai = "0.0.623"
requests = "2.32.0"
google-auth = "2.30.0"
google-auth-oauthlib = "1.1.0"
google-api-python-client = "2.100.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-assistant = "chainlit.cli:main"
chainlit-app = "chainlit.cli:main"