[tool.poetry]


name = "ai-assistant"
version = "0.1.0"
package-mode = false
authors = ["Fakher HANNAFI <fakher.hannafi@datasonic.co>"]
maintainers = ["Fakher HANNAFI <fakher.hannafi@datasonic.co>"]

description = "My Virtual Assistant who knows everything about me."
license = "MIT"
keywords = ["assistant", "ai", "development"]


[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
chainlit = "1.3.2"
openai = "1.55.3"
langchain = "0.3.7"
plotly = "5.24.1"
literalai = "0.0.623"
requests = "2.32.0"
google-auth = "2.30.0"
google-auth-oauthlib = "1.1.0"
google-api-python-client = "2.100.0"
pydantic = "2.10.1"
httpx = "0.27.2"
dnspython = "2.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-assistant = "chainlit.cli:main"
chainlit-app = "chainlit.cli:main"