[tool.poetry]


name = "ai-assistant"
version = "0.1.0"
package-mode = false
authors = ["Fakher HANNAFI <fakher.hannafi@datasonic.co>"]
maintainers = ["Fakher HANNAFI <fakher.hannafi@datasonic.co>"]

description = "My Virtual Assistant who knows everything about me."
license = "MIT"
keywords = ["assistant", "ai", "development"]

[tool.poetry.dependencies]
python = "<4.0.0,>=3.9"
chainlit = "1.2.0"
openai = "1.54.4"
plotly = "5.24.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ai-assistant = "chainlit.cli:main"